Fix card flip on mobile.

--- a/index.css
+++ b/index.css
@@ -3,10 +3,12 @@ body {
 }
 
 .the-card {
+  height: 100%;
   perspective: 1000px; 
 }
 
 .card-inner {
+  position: relative;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
@@ -23,6 +25,14 @@ body {
 
 .card-back {
   transform: rotateY(180deg);
+}
+
+@media (max-width: 575.98px) { 
+  .the-card {
+    perspective: 1000px; 
+    width: 100%;
+    height: 300px;
+  }
 }
 
 #contact {
